WIP: #9 - Game StateManager class.

--- a/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
+++ b/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
@@ -35,6 +35,7 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Base\GameStateManager.cs" />
     <Compile Include="Base\Input.cs" />
     <Compile Include="Base\OptionsManager.cs" />
     <Compile Include="Base\SoundManager.cs" />
