--- a/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
+++ b/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
@@ -39,6 +39,7 @@
     <Compile Include="Base\GameStateManager.cs" />
     <Compile Include="Base\Input.cs" />
     <Compile Include="Base\OptionsManager.cs" />
+    <Compile Include="Base\Serialization.cs" />
     <Compile Include="Base\SoundManager.cs" />
     <Compile Include="Base\SoundReference.cs" />
     <Compile Include="Base\VectorHelper.cs" />
