FET: #42 - Add new elements to the GUI Added missing elements to the GUI.

--- a/src/QuestForTheCrown2/QuestForTheCrown2.Core/QuestForTheCrown2.Core.csproj
+++ b/src/QuestForTheCrown2/QuestForTheCrown2.Core/QuestForTheCrown2.Core.csproj
@@ -130,6 +130,9 @@
     <Content Include="Content\gui\gui_background.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\gui\gui_shadow.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\gui\health_empty.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
