--- a/src/QuestForTheCrown2/QuestForTheCrown2.Core/QuestForTheCrown2.Core.csproj
+++ b/src/QuestForTheCrown2/QuestForTheCrown2.Core/QuestForTheCrown2.Core.csproj
@@ -238,7 +238,9 @@
     <Content Include="Content\sprites\Objects\FireBall.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\sprites\Objects\SavePoint.png" />
+    <Content Include="Content\sprites\Objects\SavePoint.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\sprites\Objects\Sword.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
