--- a/src/QuestForTheCrown2/QuestForTheCrown2.Core/QuestForTheCrown2.Core.csproj
+++ b/src/QuestForTheCrown2/QuestForTheCrown2.Core/QuestForTheCrown2.Core.csproj
@@ -79,12 +79,14 @@
     <Compile Include="Entities\Behaviors\WalkAroundBehavior.cs" />
     <Compile Include="Entities\Behaviors\WalkBehavior.cs" />
     <Compile Include="Entities\Characters\Bat.cs" />
+    <Compile Include="Entities\Behaviors\ChainBehavior.cs" />
     <Compile Include="Entities\Characters\Crab.cs" />
     <Compile Include="Entities\Characters\Enemy1.cs" />
     <Compile Include="Entities\Characters\Goon.cs" />
     <Compile Include="Entities\Characters\Player.cs" />
     <Compile Include="Entities\Characters\Skeleton.cs" />
     <Compile Include="Entities\Characters\Slime.cs" />
+    <Compile Include="Entities\Characters\SlimeWorm.cs" />
     <Compile Include="Entities\Characters\Zombie.cs" />
     <Compile Include="Entities\Objects\Entrance.cs" />
     <Compile Include="Entities\Objects\Item.cs" />
