INT: Added destructable bush and characters death animation support.

--- a/src/QuestForTheCrown2/QuestForTheCrown2.Core/QuestForTheCrown2.Core.csproj
+++ b/src/QuestForTheCrown2/QuestForTheCrown2.Core/QuestForTheCrown2.Core.csproj
@@ -84,6 +84,8 @@
     <Compile Include="Entities\Behaviors\WalkBehavior.cs" />
     <Compile Include="Entities\Characters\Bat.cs" />
     <Compile Include="Entities\Behaviors\ChainBehavior.cs" />
+    <Compile Include="Entities\Objects\Bush.cs" />
+    <Compile Include="Entities\Objects\Destructible.cs" />
     <Compile Include="Entities\Characters\MasterGoon.cs" />
     <Compile Include="Entities\Characters\WaterDragon.cs" />
     <Compile Include="Entities\Characters\Crab.cs" />
@@ -262,7 +264,9 @@
     <Content Include="Content\sprites\Objects\bow.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\sprites\Objects\bush.png" />
+    <Content Include="Content\sprites\Objects\bush.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\sprites\Objects\Empty.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
