FET: #50 - Created BoomerangSkeleton character.

--- a/src/QuestForTheCrown2/QuestForTheCrown2.Core/QuestForTheCrown2.Core.csproj
+++ b/src/QuestForTheCrown2/QuestForTheCrown2.Core/QuestForTheCrown2.Core.csproj
@@ -63,7 +63,9 @@
     <Compile Include="Base\VectorHelper.cs" />
     <Compile Include="Entities\Base\Animation.cs" />
     <Compile Include="Entities\Base\Container.cs" />
+    <Compile Include="Entities\Base\GameEvent.cs" />
     <Compile Include="Entities\Base\Entity.cs" />
+    <Compile Include="Entities\Base\EntityEvent.cs" />
     <Compile Include="Entities\Base\EntityRelativePosition.cs" />
     <Compile Include="Entities\Base\EntitySavedPosition.cs" />
     <Compile Include="Entities\Base\EntityUpdateBehavior.cs" />
@@ -73,6 +75,7 @@
     <Compile Include="Entities\Behaviors\BlinkBehavior.cs" />
     <Compile Include="Entities\Behaviors\BowAttackBehavior.cs" />
     <Compile Include="Entities\Behaviors\AvoidBehavior.cs" />
+    <Compile Include="Entities\Behaviors\BoomerangAttackBehavior.cs" />
     <Compile Include="Entities\Behaviors\FireWandAttackBehavior.cs" />
     <Compile Include="Entities\Behaviors\DropItemsBehavior.cs" />
     <Compile Include="Entities\Behaviors\DieBehavior.cs" />
@@ -86,6 +89,7 @@
     <Compile Include="Entities\Behaviors\WalkBehavior.cs" />
     <Compile Include="Entities\Characters\Bat.cs" />
     <Compile Include="Entities\Behaviors\ChainBehavior.cs" />
+    <Compile Include="Entities\Characters\BoomerangSkeleton.cs" />
     <Compile Include="Entities\Characters\FlameDragon.cs" />
     <Compile Include="Entities\Objects\Bush.cs" />
     <Compile Include="Entities\Objects\Destructible.cs" />
