--- a/src/QuestForTheCrown2/QuestForTheCrown2.Core/QuestForTheCrown2.Core.csproj
+++ b/src/QuestForTheCrown2/QuestForTheCrown2.Core/QuestForTheCrown2.Core.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Entities\Characters\BoomerangSkeleton.cs" />
     <Compile Include="Entities\Characters\FlameDragon.cs" />
     <Compile Include="Entities\Objects\Bush.cs" />
+    <Compile Include="Entities\Objects\HealthContainer.cs" />
     <Compile Include="Entities\Objects\Destructible.cs" />
     <Compile Include="Entities\Characters\MasterGoon.cs" />
     <Compile Include="Entities\Characters\WaterDragon.cs" />
@@ -287,6 +288,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\sprites\Objects\FireWand.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\sprites\Objects\health.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\sprites\Objects\SavePoint.png">
