--- a/src/QuestForTheCrown2/QuestForTheCrown2.Core/QuestForTheCrown2.Core.csproj
+++ b/src/QuestForTheCrown2/QuestForTheCrown2.Core/QuestForTheCrown2.Core.csproj
@@ -71,7 +71,9 @@
     <Compile Include="Entities\Base\EntityUpdateBehavior.cs" />
     <Compile Include="Entities\Base\Extensions.cs" />
     <Compile Include="Entities\Base\Frame.cs" />
+    <Compile Include="Entities\Base\HitEvent.cs" />
     <Compile Include="Entities\Behaviors\AttackBehavior.cs" />
+    <Compile Include="Entities\Behaviors\AttackTheAttackerBehavior.cs" />
     <Compile Include="Entities\Behaviors\BlinkBehavior.cs" />
     <Compile Include="Entities\Behaviors\BowAttackBehavior.cs" />
     <Compile Include="Entities\Behaviors\AvoidBehavior.cs" />
